refactor the extension for betting coding practices, also added it to the firefox extension

--- a/making-website-interactive/chrome-extension/index.html
+++ b/making-website-interactive/chrome-extension/index.html
@@ -13,6 +13,9 @@
     <button id="input-btn">
         save input
     </button>
+    <button id="tab-btn">
+        save tab
+    </button>
     <button id="delete-btn">
         delete all
     </button>
