fished the mobile app

--- a/making-website-interactive/mobile-extension/index.html
+++ b/making-website-interactive/mobile-extension/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Leads Tracker</title>
 </head>
 <body>
-    <label for="input-el">
-        <input type="text" id="input-el">
+    <label for="input-el">Enter Url:
+        <input type="text" id="input-el" placeholder="https://www.example.com">
     </label>
     <button id="input-btn">
         save input
     </button>
-    <button id="tab-btn">
-        save tab
-    </button>
+
     <button id="delete-btn">
         delete all
     </button>
